--- a/posto/posto/Base.lproj/Main.storyboard
+++ b/posto/posto/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Car View Controller-->
@@ -16,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fCb-fO-Kh4">
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fCb-fO-Kh4">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <items>
                                     <navigationItem title="Meu Carro" id="DJg-uW-gaw">
@@ -28,13 +29,121 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I0J-UT-TWr">
+                                <rect key="frame" x="0.0" y="139" width="375" height="162"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="URe-M8-4P9" id="6ya-pU-je3"/>
+                                    <outlet property="delegate" destination="URe-M8-4P9" id="HbD-ic-Fi4"/>
+                                </connections>
+                            </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Modelo" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P2c-GL-FSX">
+                                <rect key="frame" x="158" y="100" width="58" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="yjK-M6-hfj"/>
+                                    <constraint firstAttribute="width" constant="58" id="z0W-7Y-p0U"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quilometragem" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9RI-ji-MjR">
+                                <rect key="frame" x="41" y="332" width="118" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Última troca de óleo" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UJs-Yq-snN">
+                                <rect key="frame" x="41" y="373" width="155" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Última revisão" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q6G-eD-y4c">
+                                <rect key="frame" x="41" y="413" width="109" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VAG-FW-RSu">
+                                <rect key="frame" x="262" y="369" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="g1q-mG-iL0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                <connections>
+                                    <outlet property="delegate" destination="URe-M8-4P9" id="i8c-0u-g3S"/>
+                                </connections>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Gr-cJ-PXJ">
+                                <rect key="frame" x="262" y="409" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="PZ1-1E-qOw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                <connections>
+                                    <outlet property="delegate" destination="URe-M8-4P9" id="Hh4-dz-9fU"/>
+                                </connections>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vZj-yH-Lj9">
+                                <rect key="frame" x="262" y="328" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="oha-4s-XvB"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                <connections>
+                                    <outlet property="delegate" destination="URe-M8-4P9" id="3Ax-tp-l7f"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="UJs-Yq-snN" firstAttribute="top" secondItem="VAG-FW-RSu" secondAttribute="top" constant="4" id="0Fm-gu-FYT"/>
+                            <constraint firstAttribute="centerX" secondItem="P2c-GL-FSX" secondAttribute="centerX" constant="0.5" id="21n-zw-uWS"/>
+                            <constraint firstItem="UJs-Yq-snN" firstAttribute="top" secondItem="9RI-ji-MjR" secondAttribute="bottom" constant="20" id="4gI-ep-rCt"/>
+                            <constraint firstItem="Q6G-eD-y4c" firstAttribute="top" secondItem="4Gr-cJ-PXJ" secondAttribute="top" constant="4" id="55M-UP-kPw"/>
+                            <constraint firstAttribute="centerX" secondItem="I0J-UT-TWr" secondAttribute="centerX" id="Jlc-rj-1hb"/>
+                            <constraint firstItem="I0J-UT-TWr" firstAttribute="width" secondItem="f5u-Nm-SNd" secondAttribute="width" id="MIb-Pa-6qP"/>
+                            <constraint firstItem="9RI-ji-MjR" firstAttribute="leading" secondItem="f5u-Nm-SNd" secondAttribute="leadingMargin" constant="25" id="Nca-rm-Sbe"/>
+                            <constraint firstItem="Q6G-eD-y4c" firstAttribute="leading" secondItem="f5u-Nm-SNd" secondAttribute="leadingMargin" constant="25" id="OYI-xF-vEX"/>
+                            <constraint firstItem="I0J-UT-TWr" firstAttribute="top" secondItem="P2c-GL-FSX" secondAttribute="bottom" constant="18" id="OzM-kG-FPV"/>
+                            <constraint firstItem="VAG-FW-RSu" firstAttribute="trailing" secondItem="f5u-Nm-SNd" secondAttribute="trailingMargin" id="PRq-fD-Fk3"/>
+                            <constraint firstItem="P2c-GL-FSX" firstAttribute="top" secondItem="fCb-fO-Kh4" secondAttribute="bottom" constant="36" id="Re9-kY-ruv"/>
+                            <constraint firstItem="vZj-yH-Lj9" firstAttribute="trailing" secondItem="f5u-Nm-SNd" secondAttribute="trailingMargin" id="WUs-aM-xqT"/>
+                            <constraint firstItem="Q6G-eD-y4c" firstAttribute="top" secondItem="UJs-Yq-snN" secondAttribute="bottom" constant="19" id="ZAE-dN-Qse"/>
+                            <constraint firstItem="9RI-ji-MjR" firstAttribute="top" secondItem="vZj-yH-Lj9" secondAttribute="top" constant="4" id="ZRC-l8-CQX"/>
+                            <constraint firstItem="fCb-fO-Kh4" firstAttribute="width" secondItem="f5u-Nm-SNd" secondAttribute="width" id="a1B-zr-TYy"/>
+                            <constraint firstItem="9RI-ji-MjR" firstAttribute="centerY" secondItem="vZj-yH-Lj9" secondAttribute="centerY" constant="-0.5" id="gf8-mc-WWq"/>
+                            <constraint firstItem="UJs-Yq-snN" firstAttribute="leading" secondItem="f5u-Nm-SNd" secondAttribute="leadingMargin" constant="25" id="jnN-8Z-lea"/>
+                            <constraint firstItem="4Gr-cJ-PXJ" firstAttribute="trailing" secondItem="f5u-Nm-SNd" secondAttribute="trailingMargin" id="mMf-IF-OxL"/>
+                            <constraint firstAttribute="centerX" secondItem="fCb-fO-Kh4" secondAttribute="centerX" id="qMS-eM-4Rm"/>
+                            <constraint firstItem="fCb-fO-Kh4" firstAttribute="top" secondItem="iOB-wU-EzI" secondAttribute="bottom" id="tVh-mz-1gI"/>
+                            <constraint firstItem="9RI-ji-MjR" firstAttribute="top" secondItem="I0J-UT-TWr" secondAttribute="bottom" constant="31" id="umQ-oT-2hJ"/>
+                        </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="ecA-MA-u6y" appends="YES" id="sxa-lz-dcL"/>
+                        </connections>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="kmTextField" destination="vZj-yH-Lj9" id="bSu-O8-1Zq"/>
+                        <outlet property="modelLabel" destination="P2c-GL-FSX" id="1Fi-YS-z4F"/>
+                        <outlet property="modelPicker" destination="I0J-UT-TWr" id="IXs-e7-ft1"/>
+                        <outlet property="oilTextField" destination="VAG-FW-RSu" id="CgT-hn-gxT"/>
+                        <outlet property="reviewTextField" destination="4Gr-cJ-PXJ" id="n9n-dm-4AZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z6l-zi-c6O" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="3sT-Hg-Nvd" userLabel="Exit" sceneMemberID="exit"/>
+                <tapGestureRecognizer id="ecA-MA-u6y">
+                    <connections>
+                        <action selector="handleSingleTap:" destination="URe-M8-4P9" id="ybZ-cK-iZJ"/>
+                        <outlet property="delegate" destination="URe-M8-4P9" id="oXX-hW-c3d"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1245.5" y="136.5"/>
         </scene>
